fix(buttons): refatorize css and remove the anchor behaviour when screen is too small

--- a/src/components/buttons/skill/styles.css
+++ b/src/components/buttons/skill/styles.css
@@ -5,29 +5,37 @@
   display: flex;
   position: relative;
   text-decoration: none;
+
+  & span {
+    left: 50%;
+    bottom: 0%;
+    scale: 0.9;
+    opacity: 0;
+    z-index: 999;
+    padding: 3px 10px;
+    position: absolute;
+    color: var(--text);
+    white-space: nowrap;
+    border-radius: 16px;
+    font-size: var(--sm);
+    transform: translateX(-50%);
+    background: var(--background);
+    transition: all 0.15s ease-in-out;
+    border: 1px solid var(--secondary);
+    box-shadow: 2px 2px 10px 3px rgba(0, 0, 0, 0.4);
+  }
 }
 
-.skill-button span {
-  left: 50%;
-  bottom: 0%;
-  scale: 0.9;
-  opacity: 0;
-  z-index: 999;
-  padding: 3px 10px;
-  position: absolute;
-  color: var(--text);
-  white-space: nowrap;
-  border-radius: 16px;
-  font-size: var(--sm);
-  transform: translateX(-50%);
-  background: var(--background);
-  transition: all 0.15s ease-in-out;
-  border: 1px solid var(--secondary);
-  box-shadow: 2px 2px 10px 3px rgba(0, 0, 0, 0.4);
+.skill-button:hover {
+  & span {
+    scale: 1;
+    opacity: 1;
+    translate: 0px 6px;
+  }
 }
 
-.skill-button:hover span {
-  scale: 1;
-  opacity: 1;
-  translate: 0px 6px;
+@media (max-width: 550px) {
+  .skill-button {
+    pointer-events: none;
+  }
 }
